# greenspace-opengl-sdl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cc
